@@ -1,6 +1,21 @@
-/********************************************
- GFingerPoken Multiplayer Window, Networking
-********************************************/
+/* multi.c - GFingerPoken Multiplayer Window, Networking
+ * Copyright 1999-2000  Martin Hock
+ * Copyright 2005  Bas Wijnen <shevek@fmf.nl>
+ *
+ * This program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License
+ * as published by the Free Software Foundation; either version 2
+ * of the License, or (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+ */
 
 #include <stdarg.h> /* For variable arguments in netsend */
 #include <sys/types.h> /* For types needed in net stuff */
